--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         >
         <h1>{{ firstName }} {{ lastName }}</h1>
         <h3>Email: {{ email }}</h3>
-        <button>Get Random User</button>
+        <button v-on:click="getUser()">Get Random User</button>
     </div>
     
     <script src="https://unpkg.com/vue@3.0.5"></script>
